fix frontend comment alignment

--- a/views/assets/src/helpers/less/customization/pm-overview.less
+++ b/views/assets/src/helpers/less/customization/pm-overview.less
@@ -1162,10 +1162,6 @@ div#pm-calender-page .project-select-area .form-content-wrap {
 	min-width: 0px !important;
 }
 
-#wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
-	margin-left: 35px;
-}
-
 .pm-messege-wrapper .dicussion-meta .comment-count i::before {
 	margin-left: 0px;
 }
